name:                kvdb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kvdb#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Oro
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kvdb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, network, bytestring, containers, stm, bytestring-show
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
